src/test/resources/private/typechecking/pass/access/access_pass_method_01.jova
class Testing {
  private int x;

  private int pleaseTouchMe(int x){
    return 69;
  }

  public int test() {
        return pleaseTouchMe(this.x);
    }
}