src/test/resources/private/typechecking/fail/access/access_fail_method_01.jova
class Test{
  private int pleaseTouchMe(int x){
    return 69;
  }
}

class Testing {
  private int x;
  private Test test;

  public int test() {
        return test.pleaseTouchMe(this.x);
    }
}